--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,7 @@
 }
 
 #bpenv-container .toolbar-btn {
-  background-color: rgb(33,37,41);
+  background-color: rgb(33, 37, 41);
   color: white;
   border: none;
   border-radius: 4px;
@@ -46,7 +46,7 @@
 }
 
 #bpenv-container .toolbar-btn-selected {
-  color: rgb(33,37,41);
+  color: rgb(33, 37, 41);
   background-color: white;
   border: none;
   border-radius: 4px;
@@ -83,4 +83,7 @@
   color: rgba(255, 255, 255, 0.5);
 }
 
-/* TODO: Aggiungere stile su AttributesForm */
+#bpenv-container .no-focus-outline:focus {
+  outline: none;
+  box-shadow: none;
+}
